--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,11 +1,13 @@
 .footer {
-  display: fixed;
+  position: fixed;
   bottom: 0;
+  right: 0;
+  left: 0;
   background-color: darkorange;
   font-size: 1.5em;
   font-weight: bold;
   text-align: center;
-  padding: 10px;
+  padding: 15px;
 }
 .item {
   margin: 20px;
