--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -1,4 +1,5 @@
 .todoForm {
+  max-width: 60%;
   width: 500px;
   background-color: #fff;
   margin: 0 auto;
@@ -21,11 +22,28 @@
   display: inline-block;
   background-color: darkorange;
   border: none;
+  outline: none;
   border-radius: 8px;
   padding: 12px 20px;
   color: #fff;
-  font-size: 16px;
+  cursor: pointer;
 }
 .inputContainer {
   display: flex;
+}
+
+@media (max-width: 500px) {
+  .todoForm {
+    max-width: 80%;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  .modernInput {
+    font-size: 14px;
+  }
+  .modernButton {
+    border-radius: 5px;
+    padding: 8px 12px;
+    font-size: 14px;
+  }
 }
