--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -8,3 +8,9 @@
   padding-top: 50px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
+
+@media (max-width: 500px) {
+  .header {
+    font-size: 40px;
+  }
+}
