--- a/src/components/todoItem.module.css
+++ b/src/components/todoItem.module.css
@@ -1,4 +1,5 @@
 .item {
+  max-width: 100%;
   width: 500px;
   color: #353935;
   font-size: 20px;
@@ -23,4 +24,15 @@
 }
 .classNameLine {
   text-decoration: line-through;
+}
+
+@media (max-width: 500px) {
+  .deleteButton {
+    border-radius: 5px;
+    padding: 8px 14px;
+    font-size: 14px;
+  }
+  .item {
+    font-size: 18px;
+  }
 }
